# mlops-titanic-lab

./: .env.example  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
AutogluonModels/ag-20250428_142036/: learner.pkl
AutogluonModels/ag-20250428_142036/models/: trainer.pkl
AutogluonModels/ag-20250428_142036/models/LightGBMLarge/: model.pkl
AutogluonModels/ag-20250428_142102/: learner.pkl  metadata.json
AutogluonModels/ag-20250428_142102/models/: trainer.pkl
AutogluonModels/ag-20250428_192404/: learner.pkl  metadata.json
AutogluonModels/ag-20250428_192404/models/: trainer.pkl
AutogluonModels/ag-20250428_192749/: learner.pkl
AutogluonModels/ag-20250428_192749/models/: trainer.pkl
AutogluonModels/ag-20250428_193129/: learner.pkl  metadata.json
AutogluonModels/ag-20250428_193129/models/: trainer.pkl
AutogluonModels/ag-20250428_201218/: learner.pkl
AutogluonModels/ag-20250428_201218/models/: trainer.pkl
AutogluonModels/ag-20250428_201940/: learner.pkl
AutogluonModels/ag-20250428_201944/: learner.pkl
AutogluonModels/ag-20250428_201958/: learner.pkl
AutogluonModels/ag-20250428_202024/: learner.pkl
AutogluonModels/ag-20250428_202210/: learner.pkl  metadata.json
AutogluonModels/ag-20250428_202333/: learner.pkl
AutogluonModels/ag-20250428_202352/: learner.pkl
conf/: config.yaml
models/: .gitignore  predictor.pkl
notebooks/: wandb101.ipynb
outputs/2025-04-30/11-35-40/.hydra/: hydra.yaml
src/: api.py  data_loader.py  pipeline.py  preprocessing.py  save_model.py  train_model.py
src/fake/: estimator.py
(+25 files in other folders)
